# CassandraAPI

./: .gitignore  Makefile.am  README.md  config.h  configure.ac
d02/: D02.c
d03/: Makefile.am  d03.c
include/: common.h  testcase.h
kafka/kafka-reader/: pom.xml  rebuild.sh  run.sh
libs/: Makefile.am
libs/base_epoll/: Makefile.am  base_epoll.c  base_epoll.h
libs/codecs/: Makefile.am
libs/codecs/base64/: Makefile.am  base64.c  base64.h
libs/codecs/md5/: Makefile.am
libs/codecs/urlencode/: Makefile.am  Test_urlencode.c  urlencode.c  urlencode.h
libs/sdf/: Makefile.am  sdfconfig.c  sdfconfig.h  sdflib.c  sdflib.h  sdflog.c  sdflog.h  sdftrace.c  sdftrace.h  sdfxml.c  sdfxml.h
libs/stacks/: Makefile.am
libs/stacks/cassandra/: Makefile.am  cassandra_api.c  cassandra_api.h  test_cassandra_api.c
libs/stacks/http/: Makefile.am  http.c  http.h
libs/stacks/ldap/: Makefile.am  ldap.c  ldap.h  ldap_client.c  ldap_common.c  ldap_common.h  ldap_server.c
libs/stacks/rauthen/: Makefile.am  rauthen.c  rauthen.h
libs/stacks/schema/: schema_cassandra_Type_Text
libs/watch/: Makefile.am  test_watch.c  watch.c  watch.h
libs/xthread/: Makefile.am  xthread.c  xthread.h
schema/: schema_cassandra  schema_cassandra_Type_Text
spark/spark-provisioning/: .classpath  .project  pom.xml  rebuild.sh  run-exhibition.sh  run-spark-AdjustStockReport.sh  run-spark-DirectSaleDetailReport.sh  run-spark-DirectSaleSummaryReport.sh  run-spark-RequestGoodsDetailReport.sh  run-spark-RequestGoodsSummaryReport.sh  run-spark-TransferDetailReport.sh  run-spark-TransferSummaryReport.sh  run-spark-aggregation-exhibition.sh  run-spark-aggregation.sh  run-spark-aggregationAlltradeReportsAggregation.sh  run.sh
spark/spark-provisioning/src/main/resources/: ais-spark.properties
(+54 files in other folders)
