noinst_LTLIBRARIES = libsdf.la

libsdf_la_CFLAGS = 

libsdf_la_SOURCES = sdfconfig.h \
                    sdfconfig.c \
                    sdflib.h \
                    sdflib.c \
                    sdflog.h \
                    sdflog.c \
                    sdftrace.h \
                    sdftrace.c \
                    sdfxml.h \
                    sdfxml.c 
