noinst_LTLIBRARIES = libstack_ldap.la

libstack_ldap_la_CFLAGS =  -I$(top_srcdir)/include \
                           -I$(top_srcdir)/libs/sdf \
                           -I$(top_srcdir)/libs/stacks/rauthen

libstack_ldap_la_SOURCES = ldap.h ldap_common.h ldap.c ldap_common.c ldap_client.c ldap_server.c
